# ccbox

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: phase0.md
scripts/: phase0_validate.sh
src/ccbox/: __init__.py  claude_settings.py  config.py  doctor.py  git_sync.py  image.py  image_build.py  image_pull.py  log.py  sandbox.py
src/ccbox/cli/: __init__.py  base.py  main.py  registry.py
src/ccbox/cli/config/: __init__.py  init.py  render.py  show.py
src/ccbox/cli/diagnostics/: __init__.py  doctor.py  runtimes.py
src/ccbox/cli/image/: __init__.py  bake.py  pull.py
src/ccbox/cli/sandbox/: __init__.py  enter.py
src/ccbox/cli/sync/: __init__.py  apply.py  harvest.py
src/ccbox/runtime/: __init__.py  apptainer.py  base.py  bwrap.py  oci.py  shifter.py
tests/: conftest.py  test_claude_settings.py  test_cli.py  test_config.py  test_detect.py  test_doctor.py  test_git_sync.py  test_image.py  test_image_build.py  test_image_pull.py  test_logging.py  test_runtime.py  test_sandbox.py
