[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccbox"
dynamic = ["version"]
description = "Run Claude Code inside a confined, configurable sandbox across container runtimes."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alkaid Cheng", email = "alkaidc@stanford.edu" }]
keywords = ["claude", "claude-code", "sandbox", "security", "container", "hpc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Build Tools",
]
dependencies = ["PyYAML>=5.1"]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.1", "black>=24", "mypy>=1.8", "types-PyYAML"]

[project.urls]
Homepage = "https://github.com/AlkaidCheng/ccbox"
Repository = "https://github.com/AlkaidCheng/ccbox"
Issues = "https://github.com/AlkaidCheng/ccbox/issues"

[project.scripts]
ccbox = "ccbox.cli:main"

[tool.hatch.version]
path = "src/ccbox/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/ccbox"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
# Line length is owned by Black; E501 on strings/comments/URLs is noise.
ignore = ["E501"]

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
explicit_package_bases = true
namespace_packages = true
files = ["src/ccbox"]
warn_unused_ignores = true
no_implicit_optional = true
